Fix. Dropdowns are too narrow.

--- a/admin/scss/_forms.scss
+++ b/admin/scss/_forms.scss
@@ -222,7 +222,7 @@ form.small .field, .field.small {
 	
 	/* chzn override */
 	.chzn-container {
-		max-width: 416px;
+		max-width: 512px;
 		.chzn-results {
 			
 			li {
